--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora</title>
     <link rel="stylesheet" href="style/style.css">
-    <link rel="icon" href="icon.avif">
+    <link rel="icon" href="icon.jpg">
 </head>
 
 <body>
